Bug 254155 - REGRESSION(259969@main): Screen sharing is no longer working in public builds and causing UIProcess to crash
Summary: REGRESSION(259969@main): Screen sharing is no longer working in public builds...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: All macOS 12
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-03-20 07:06 PDT by Dinesh Kumar Vyas
Modified: 2023-03-31 11:00 PDT (History)
6 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dinesh Kumar Vyas 2023-03-20 07:06:11 PDT
Screen sharing is no longer working in public builds and causing UIProcess to crash (when using macOS 12) due to empty device list and force unwrapping `protectedRequest->videoDeviceUIDs().first()`

We seams remove device listing available screens and windows in following commit
https://github.com/WebKit/WebKit/commit/1ad6bf1f3f6c8122574d79e9ae8bb53a2a61669a

However I am aware that WebKit implemented screen and window selection in macOS 13+, but that's also limited to internal builds only, and macOS versions below 13.0 are now not able to use screen sharing.
Comment 1 Radar WebKit Bug Importer 2023-03-27 07:07:15 PDT
<rdar://problem/107265903>
Comment 2 Eric Carlson 2023-03-30 17:02:37 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12216
Comment 3 EWS 2023-03-31 11:00:27 PDT
Committed 262424@main (3bc64a5506e3): <https://commits.webkit.org/262424@main>

Reviewed commits have been landed. Closing PR #12216 and removing active labels.