REGRESSION(259969@main): Screen sharing is no longer working in public builds and causing UIProcess to crash https://bugs.webkit.org/show_bug.cgi?id=254155 rdar://107265903

Reviewed by Youenn Fablet.

If the user agrees to share a screen on a version of macOS that doesn't have the
ScreenCaptureKit picker, share the main screen. This restores the behavior before
https://commits.webkit.org/259969@main.

* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/platform/mediastream/mac/CGDisplayStreamScreenCaptureSource.h:
* Source/WebCore/platform/mediastream/mac/CGDisplayStreamScreenCaptureSource.mm:
(WebCore::CGDisplayStreamScreenCaptureSource::screenCaptureDeviceForMainDisplay):
* Source/WebKit/UIProcess/mac/DisplayCaptureSessionManager.mm:
(WebKit::DisplayCaptureSessionManager::promptForGetDisplayMedia):

Canonical link: https://commits.webkit.org/262424@main